cmake_minimum_required(VERSION 3.28)
project(CPP_Codes)

set(CMAKE_CXX_STANDARD 17)

add_executable(CPP_Codes main.cpp
        selection_sort.cpp
        check_sorted_rotated.cpp
        remove_duplicate.cpp
        rotate_left_by_k.cpp
        move_zeros.cpp
        union_two_sorted_array.cpp
        missing_number.cpp
        max_consecutive_ones.cpp
        max_subarray_with_sum_k.cpp
        two_sum.cpp
        sort_colors.cpp
        majority_element.cpp
        rearrange_array_element_by_sign.cpp
        next_permutation.cpp
        leaders_in_array.cpp
        longest_consecutive_sequence.cpp
        rotate_metrix.cpp
        spiral_order_matrix.cpp
        maximum_subarray_sum_equals_k.cpp
        pascal_triangle.cpp
        majority_element_2.cpp
        3sum.cpp
        3sum_optimal.cpp
        4sum.cpp
        merge_intervals.cpp
        merge_sorted_array_without_sc.cpp
        missing_repeating_number.cpp
        merge_sort.cpp
        inversion_count.cpp
        maxumum_subarray_multiplication.cpp
        binary_search.cpp
        lower_bound_BS.cpp
        upper_bound_BS.cpp
        first_last_occurence_of_x.cpp
        search_in_rotated_sorted_BS.cpp
        search_in_rotated_sorted_2_BS.cpp
        minimum_sorted_rotated_array.cpp
        single_in_sorted_array.cpp
        sqrt_of_integer_BS.cpp
        nth_root_of_M_BS.cpp
        koko_eating_bananas_BS.cpp
        minimum_n_bouquets_BS.cpp
        min_divisor_given_threshold_BS.cpp
        min_cap_to_ship_all_product_BS.cpp
        kth_missing_number_BS.cpp
        agressive_cows_BS.cpp
        book_allocation_BS.cpp
        painter_partition_BS.cpp
        max_points_from_card_SW.cpp
        longest_substring_without_repeating_SW.cpp
        max_consecutive_one_3_SW.cpp
        no_of_substring_containing_all_3_SW.cpp
        longest_repeating_char_replacement_SW.cpp
        TreeNode.cpp
        TreeNode.h
        level_order_traversal_BT.cpp
        binary_sum_equals_k_SW.cpp
        number_of_nice_subarray_SW.cpp
        subarray_with_k_diff_integer_SW.cpp
        minimum_window_substring_SW.cpp
        next_greater_element_1_ST.cpp
        next_greater_element_2_ST.cpp
        largest_rectangle_in_histogram_ST.cpp
        path_from_s_to_t_BT.cpp
        lowest_common_ancestor_BT.cpp
        maximum_depth_BT.cpp
        balanced_BT.cpp
        diameter_of_BT.cpp
        maximum_path_sum_BT.cpp
        identical_BT.cpp
        zig_zag_traversal_BT.cpp
        boundry_traversal_BT.cpp
        vertical_order_traversal_BT.cpp
        top_view_of_BT.cpp
        bottom_view_BT.cpp
        right_view_of_BT.cpp
        isSymmertric.cpp
        root_to_node_BT.cpp
        max_width_of_BT.cpp
        children_sum_property_BT.cpp
        nodes_at_dis_k_BT.cpp
        minimum_time_to_burn_BT.cpp
        count_total_nodes_in_complete_BT.cpp
        BFS_GH.cpp
        DFS_GH.cpp
        no_of_provinces_GH.cpp
        no_of_islands_GH.cpp
        flood_fill_GH.cpp
        rotten_oranges_GH.cpp
        cycle_in_undirected_GH.cpp
        cycle_in_undirected_DFS_GH.cpp
        zero_one_matrix_GH.cpp
        surrounded_regions_GH.cpp
        no_of_enclaves_GH.cpp
        no_of_distict_island_GH.cpp
        bipartite_GH.cpp
        bipartite_DFS_GH.cpp
        cycle_in_directed_GH.cpp
        course_schdule_2_GH.cpp
        find_eventual_safe_nodes_GH.cpp
        topological_sort_GH.cpp
        kahn's_algo_topo_sort_GH.cpp
        course_schedule_1_topo_sort.cpp
        alien_dictionary_TOPO_GH.cpp
        shortest_path_from_src_in_DAG_GH.cpp
)
